--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,8 +45,8 @@
         </receiver>
 
         <activity android:name=".Activities.ViewPc" />
-        <activity android:name=".Activities.ViewInventoryReport"></activity>
-        <activity android:name=".Activities.ReportPc"></activity>
+        <activity android:name=".Activities.ViewInventoryReport" />
+        <activity android:name=".Activities.EditProfileActivity"></activity>
     </application>
 
 </manifest>
