--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.avendano.cp_scan">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -65,7 +66,6 @@
         <activity
             android:name=".Activities.ViewPc"
             android:configChanges="orientation"
-            android:exported="true"
             android:screenOrientation="portrait" />
         <activity
             android:name=".Activities.ViewInventoryReport"
@@ -92,7 +92,9 @@
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
         <activity android:name=".Activities.SearchActivity" />
-        <activity android:name=".Activities.ViewRepairReport"></activity>
+        <activity android:name=".Activities.ViewRepairReport" />
+        <activity android:name=".Activities.SignatureActivity"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
