--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -93,8 +93,7 @@
             android:screenOrientation="portrait" />
         <activity android:name=".Activities.SearchActivity" />
         <activity android:name=".Activities.ViewRepairReport" />
-        <activity android:name=".Activities.SignatureActivity"
-            android:exported="true"></activity>
+        <activity android:name=".Activities.SignatureActivity"></activity>
     </application>
 
 </manifest>
