--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,6 @@ dependencies {
     compile 'com.google.zxing:core:3.2.1'
     compile 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
     compile 'com.github.d-max:spots-dialog:0.7@aar'
+
+    compile 'com.nex3z:notification-badge:0.1.0'
 }
