--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,7 @@ dependencies {
     compile 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
     compile 'com.github.d-max:spots-dialog:0.7@aar'
 
+
     compile 'com.nex3z:notification-badge:0.1.0'
+    compile 'com.michaelmuenzer.android:ScrollableNumberPicker:0.2.2'
 }
