--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,7 +72,9 @@
             android:name=".Activities.EditRequestSchedule"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
-        <activity android:name=".Activities.ViewRepairReport" />
+        <activity android:name=".Activities.ViewRepairReport"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" />
         <activity android:name=".Activities.SignatureActivity" />
         <activity
             android:name=".Activities.Main_Page"
@@ -83,14 +85,33 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activities.ProfileActivity" />
-        <activity android:name=".Activities.RoomActivity" />
-        <activity android:name=".Activities.RequestListsActivity" />
-        <activity android:name=".Activities.SchedulesActivity" />
-        <activity android:name=".Activities.ReportActivity" />
-        <activity android:name=".Activities.InventoryActivty" />
-        <activity android:name=".Activities.AssessPc" />
-        <activity android:name=".Activities.RequestPeripherals"></activity>
+        <activity android:name=".Activities.ProfileActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" />
+        <activity android:name=".Activities.RoomActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"  />
+        <activity android:name=".Activities.RequestListsActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" />
+        <activity android:name=".Activities.RequestScheduleActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" />
+        <activity android:name=".Activities.ReportActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" />
+        <activity android:name=".Activities.InventoryActivty"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" />
+        <activity android:name=".Activities.AssessPc"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Activities.RequestPeripherals"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Activities.ViewRequestPeripheralsDetails"
+            android:configChanges="orientation"
+            android:screenOrientation="landscape"></activity>
     </application>
 
 </manifest>
